# interesting_renderers

./: .gitignore  CMakeLists.txt
common/: CMakeLists.txt
common/include/: abstract_application.h  drawable.h  mesh.h  model.h  shader.h  shader_program.h  sharing.h  texture.h  vertex.h
common/src/: abstract_application.cpp  mesh.cpp  model.cpp  shader.cpp  shader_program.cpp  sharing.cpp  texture.cpp  vertex.cpp
mesh_subdivision/: CMakeLists.txt
mesh_subdivision/include/: application.h  subdiv.h  subdiv_loop.h
mesh_subdivision/src/: application.cpp  main.cpp  subdiv_loop.cpp
mesh_subdivision/test/: subdiv_loop_test.cpp
rope_simulation/: CMakeLists.txt
rope_simulation/src/: main.cpp
shaders/: pure-color.frag  stable-position.vert
